--- a/Heatmapper/View/Base.lproj/Main.storyboard
+++ b/Heatmapper/View/Base.lproj/Main.storyboard
@@ -649,30 +649,44 @@ DQoNCg
                                     </button>
                                 </subviews>
                             </stackView>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="kqC-cv-6ZX">
-                                <rect key="frame" x="0.0" y="88" width="414" height="744"/>
-                            </imageView>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7p0-Xp-GAh">
+                                <rect key="frame" x="0.0" y="192" width="414" height="544"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Bi1-ui-buG">
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="544"/>
+                                    </imageView>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="Bi1-ui-buG" firstAttribute="centerY" secondItem="7p0-Xp-GAh" secondAttribute="centerY" id="1It-Tv-1rM"/>
+                                    <constraint firstAttribute="bottom" secondItem="Bi1-ui-buG" secondAttribute="bottom" id="NND-Bc-NTB"/>
+                                    <constraint firstItem="Bi1-ui-buG" firstAttribute="leading" secondItem="7p0-Xp-GAh" secondAttribute="leading" id="VGu-gf-Zq8"/>
+                                    <constraint firstItem="Bi1-ui-buG" firstAttribute="centerX" secondItem="7p0-Xp-GAh" secondAttribute="centerX" id="bq1-Lf-3EQ"/>
+                                    <constraint firstAttribute="trailing" secondItem="Bi1-ui-buG" secondAttribute="trailing" id="rWL-Rh-T1l"/>
+                                    <constraint firstItem="Bi1-ui-buG" firstAttribute="top" secondItem="7p0-Xp-GAh" secondAttribute="top" id="xfq-OM-VDh"/>
+                                </constraints>
+                            </scrollView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="142-na-oQ5"/>
-                        <color key="backgroundColor" systemColor="systemGreenColor"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="142-na-oQ5" firstAttribute="trailing" secondItem="kqC-cv-6ZX" secondAttribute="trailing" id="4tH-hS-3Tj"/>
-                            <constraint firstItem="kqC-cv-6ZX" firstAttribute="top" secondItem="142-na-oQ5" secondAttribute="top" id="5jn-BP-dmj"/>
-                            <constraint firstItem="Z3D-sr-eeK" firstAttribute="top" secondItem="kqC-cv-6ZX" secondAttribute="bottom" id="KuT-nl-bY4"/>
+                            <constraint firstItem="7p0-Xp-GAh" firstAttribute="leading" secondItem="142-na-oQ5" secondAttribute="leading" id="KfQ-TM-HiO"/>
+                            <constraint firstItem="Z3D-sr-eeK" firstAttribute="top" secondItem="7p0-Xp-GAh" secondAttribute="bottom" constant="96" id="Ktg-9N-gg5"/>
                             <constraint firstItem="142-na-oQ5" firstAttribute="bottom" secondItem="Z3D-sr-eeK" secondAttribute="bottom" id="RqK-ic-l7l"/>
                             <constraint firstItem="Z3D-sr-eeK" firstAttribute="leading" secondItem="142-na-oQ5" secondAttribute="leading" id="Tl5-0E-mjr"/>
                             <constraint firstItem="142-na-oQ5" firstAttribute="trailing" secondItem="Z3D-sr-eeK" secondAttribute="trailing" id="alV-1a-pEL"/>
-                            <constraint firstItem="kqC-cv-6ZX" firstAttribute="leading" secondItem="142-na-oQ5" secondAttribute="leading" id="nto-4F-jfe"/>
+                            <constraint firstItem="7p0-Xp-GAh" firstAttribute="trailing" secondItem="142-na-oQ5" secondAttribute="trailing" id="iS3-Ri-j9m"/>
+                            <constraint firstItem="7p0-Xp-GAh" firstAttribute="top" secondItem="142-na-oQ5" secondAttribute="top" constant="104" id="s4K-3o-kbw"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="gmD-jc-c6I"/>
                     <connections>
-                        <outlet property="heatmapImageView" destination="kqC-cv-6ZX" id="eHa-hV-zV5"/>
+                        <outlet property="heatmapImageView" destination="Bi1-ui-buG" id="uJP-g2-Vxl"/>
+                        <outlet property="scrollView" destination="7p0-Xp-GAh" id="zLP-kV-U88"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="aQj-td-zHN" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-614" y="790"/>
+            <point key="canvasLocation" x="-614.49275362318849" y="789.50892857142856"/>
         </scene>
         <!--DTM Heatmap-->
         <scene sceneID="WoK-xJ-xL1">
@@ -811,9 +825,6 @@ DQoNCg
         </systemColor>
         <systemColor name="systemBlueColor">
             <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
-        <systemColor name="systemGreenColor">
-            <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
